--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,5 +14,8 @@
     "ejs": "^3.1.3",
     "express": "^4.16.4",
     "mongoose": "^4.11.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
